[package]

name = "ferrum"
version = "0.0.2"
authors = [ "Nikita Pekin <contact@nikitapek.in>" ]

[[bin]]

name = "ferrum"
path = "src/main.rs"

[dependencies]
env_logger = "0.3"
getopts = "0.2"
log = "0.3"
mustache = "0.7"
yaml-rust = "0.3"

[dependencies.clippy]
optional = true
version = "0.0"

[features]
nightly = []
nightly-testing = [
    "clippy",
    "nightly",
]
