[package]
name = "ferru"
version = "0.4.0"
authors = [ "Nikita Pekin <contact@nikitapek.in>" ]
description = "A lightweight, blazing fast static site generator"
license = "BSD-3-Clause"
documentation = "https://docs.rs/ferru"
homepage = "https://github.com/indiv0/ferru"
repository = "https://github.com/indiv0/ferru"

[dependencies]
env_logger = "0.3.5"
log = "0.3.6"
mustache = "0.7.0"
serde_yaml = "0.7.3"

[dependencies.clap]
features = ["color", "suggestions", "yaml"]
version = "2.14.0"

[dependencies.clippy]
optional = true
version = "0.0"

[features]
nightly = []
nightly-testing = [
#    "clap/lints",
    "clippy",
    "nightly",
]
